# bar-rs

./: Cargo.toml
src/: blocks.rs  colors.rs  events.rs  lib.rs  main.rs
src/blocks/: clock_block.rs  date_block.rs  load_block.rs  media_block.rs  network_block.rs  separator.rs  volume_block.rs
