[package]
name = "bar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
mpris = "*"
sysinfo = "*"
pulsectl-rs = "*"
libpulse-binding = "*"
serde_json = "*"
serde_repr = "*"
serde = { version = "*", features = ["derive"] }
